k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helpninja-service
  labels:
    app: helpninja
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: helpninja
